<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/dimen_5dp"
    android:paddingTop="@dimen/dimen_5dp">

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="@dimen/dimen_102dp"
        android:layout_height="@dimen/dimen_150dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dimen_2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/movie_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="見習冇限耆"
                android:textColor="@color/white"
                android:textSize="@dimen/text_22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/movie_total_revenue"
                android:textColor="@color/white"
                android:textSize="@dimen/text_22sp" />

            <TextView
                android:id="@+id/tv_total_revenue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="8000000"
                android:textColor="@color/white"
                android:textSize="@dimen/text_22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/movie_open_date"
                android:textColor="@color/white"
                android:textSize="@dimen/text_22sp" />

            <TextView
                android:id="@+id/tv_open_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="2015-09-24"
                android:textColor="@color/white"
                android:textSize="@dimen/text_22sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>